// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The BackgroundView component should accept extra props 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(249, 249, 251)",
          "flex": 1,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  />,
]
`;

exports[`The BackgroundView component should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(249, 249, 251)",
          "flex": 1,
        },
        undefined,
      ]
    }
  />,
]
`;

exports[`The BackgroundView component should render as a system color 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgba(142, 142, 147, 0.2)",
          "flex": 1,
        },
        undefined,
      ]
    }
  />,
]
`;

exports[`The BackgroundView component should render with paper color 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  />,
]
`;
